--- a/res/xml/wm8994_settings.xml
+++ b/res/xml/wm8994_settings.xml
@@ -1,13 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- General settings -->
-    <PreferenceCategory android:key="general_category"
-        android:title="@string/general_title">
+	<!-- General settings -->
+	<PreferenceCategory android:key="general_category"
+		android:title="@string/general_title">
 
-        <CheckBoxPreference android:key="pref_wm8994_control_enable"
-            android:title="@string/pref_wm8994_control_enable_title" android:summary="@string/pref_wm8994_control_enable_summary" />
-
+		<CheckBoxPreference android:key="pref_wm8994_control_enable"
+			android:title="@string/pref_wm8994_control_enable_title"
+			android:summary="@string/pref_wm8994_control_enable_summary" />
+	
+	</PreferenceCategory>
+	
+	<!--  Internal speaker options -->
+	<PreferenceCategory android:key="wm8994_internal_speaker"
+		android:title="@string/category_wm8994_internal_speaker">
+			
+		<CheckBoxPreference android:key="pref_wm8994_speaker_tuning"
+			android:title="@string/pref_wm8994_speaker_tuning_title"
+			android:summary="@string/pref_wm8994_speaker_tuning_summary"
+			android:dependency="pref_wm8994_control_enable" />
+		
     </PreferenceCategory>
 
 </PreferenceScreen>
