--- a/res/xml/wm8994_settings.xml
+++ b/res/xml/wm8994_settings.xml
@@ -30,7 +30,44 @@
    			android:title="@string/pref_wm8994_mono_downmix_title"
    			android:summary="@string/pref_wm8994_mono_downmix_summary"
    			android:dependency="pref_wm8994_control_enable" />
+   			
+   		<CheckBoxPreference android:key="pref_wm8994_stereo_expansion"
+   			android:title="@string/pref_wm8994_stereo_expansion_title"
+   			android:summary="@string/pref_wm8994_stereo_expansion_summary"
+   			android:dependency="pref_wm8994_control_enable" />
    	
    	</PreferenceCategory>
+   	
+   	<!--  D/AC, A/DC -->
+   	<PreferenceCategory android:key="wm8994_dac_config_category"
+   		android:title="@string/category_wm8994_dac_config">
+   		
+   		<CheckBoxPreference android:key="pref_wm8994_dac_direct"
+   			android:title="@string/pref_wm8994_dac_direct_title"
+   			android:summary="@string/pref_wm8994_dac_direct_summary"
+   			android:dependency="pref_wm8994_control_enable" />
+   			
+  		<CheckBoxPreference android:key="pref_wm8994_dac_osr128"
+   			android:title="@string/pref_wm8994_dac_osr128_title"
+   			android:summary="@string/pref_wm8994_dac_osr128_summary"
+   			android:dependency="pref_wm8994_control_enable" />
+   			
+   		<CheckBoxPreference android:key="pref_wm8994_adc_osr128"
+   			android:title="@string/pref_wm8994_adc_osr128_title"
+   			android:summary="@string/pref_wm8994_adc_osr128_summary"
+   			android:dependency="pref_wm8994_control_enable" />
+   		
+	</PreferenceCategory>
+	
+	<!-- Codec settings -->
+	<PreferenceCategory android:key="wm8994_codec_optimization_category"
+		android:title="@string/category_wm8994_codec_optimization">
+		
+		<CheckBoxPreference android:key="pref_wm8994_fll_tuning"
+			android:title="@string/pref_wm8994_fll_tuning_title"
+			android:summary="@string/pref_wm8994_fll_tuning_summary"
+			android:dependency="pref_wm8994_control_enable" />
+		
+	</PreferenceCategory>
 
 </PreferenceScreen>
