Moved to sound menu and added configurable visibility

--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -116,4 +116,13 @@
 			android:persistent="false" />
 	</PreferenceCategory>
 
+        <!--  WM8994 Control [TESTING] -->
+        <PreferenceScreen android:key="wm8994_settings"
+            android:title="@string/wm8994_settings_title_head"
+            android:summary="@string/wm8994_settings_summary_head">
+            <intent android:action="android.intent.action.MAIN"
+                android:targetPackage="com.cyanogenmod.cmparts"
+                android:targetClass="com.cyanogenmod.cmparts.activities.WM8994ControlActivity" />
+        </PreferenceScreen>
+
 </PreferenceScreen>
